# openclaw-removed-skills

./: README.md  readme-removed.md
.github/workflows/: update-removed-skills.yml
scripts/: generate-removed-readme.mjs
skills/0xarkstar/notion-cli-mcp/: SKILL.md  _meta.json
skills/1044197988/ht-skills/: README.md  SKILL.md  _meta.json  config.json
skills/117788abc/clawtip/: IMPORTANT_STATEMENTS.md  SKILL.md  _meta.json
skills/117788abc/clawtip-weather/: SKILL.md  _meta.json
skills/137984917-cyber/interior-fullplan/: _meta.json  skill.json
skills/141553/honest-agent/: SKILL.md  _meta.json
skills/141553/kb-archiver/: SKILL.md  _meta.json
skills/141553/layered-memory-sys/: README.md  SKILL.md  _meta.json  package-lock.json  package.json
skills/141553/long-term-plan/: SKILL.md  _meta.json
skills/156554395/tx-cos/: SKILL.md  _meta.json
skills/1970168137/china-visa-guide/: SKILL.md  _meta.json
skills/danjin/aws-redshift-skills/: README.md  SKILL.md  _meta.json  pyproject.toml
skills/danjin/aws-redshift-skills/references/data_api/: query_guide.md
skills/danjin/aws-redshift-skills/references/provisioned/: cluster_guide.md  snapshot_guide.md
skills/danjin/aws-redshift-skills/references/serverless/: namespace_guide.md  workgroup_guide.md
skills/danjin/aws-redshift-skills/scripts/client/: boto_client.py
skills/danjin/aws-redshift-skills/scripts/config/: redshift_config.py
skills/danjin/aws-redshift-skills/scripts/data_api/: queries.py  redshift_data_cli.py
skills/danjin/aws-redshift-skills/scripts/provisioned/: clusters.py  redshift_provisioned_cli.py  snapshots.py
skills/danjin/aws-redshift-skills/scripts/serverless/: namespaces.py  redshift_serverless_cli.py  workgroups.py
skills/morvanzhou/google-analytics-and-search-improve/scripts/: ga4_query.py  perf_audit.py  pyproject.toml
skills/morvanzhou/improve-skill-with-best-practices/scripts/: bing_query.py  ga4_funnel.py  geo_audit.py  gsc_query.py  pyproject.toml  seo_audit.py  utils.py
skills/sparki-io/sparki-video-editor/: SKILL.md  _meta.json  pyproject.toml
(+8507 files in other folders)
