[project]
name = "aws-redshift-skills"
version = "0.1.0"
description = "AWS Redshift skill for AI agents — supports Redshift Provisioned, Serverless, and Data API"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
