[project]
name = "google-analytics-and-search-improve"
version = "0.1.0"
description = "Scripts for Google Analytics, Search Console, and Bing Webmaster data collection & site auditing"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.194.0",
    "google-auth>=2.49.2",
    "google-analytics-data>=0.21.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "matplotlib>=3.10.8",
]
